@@ -305,11 +305,6 @@
 
 #-reportpipe command
 
-# This requires clients to be logged in either with /identify or through
-# the central database by signing up on http://my.BZFlag.org/bb/
-
-#-requireidentify
-
 # This requires clients to use UDP (a good thing).  This will generally
 # make the server behave better, and make play more smooth.
 
