@@ -114,7 +114,6 @@ const char *usageString =
 "[-replay] "
 "[-reportfile <filename>] "
 "[-reportpipe <filename>] "
-"[-requireidentify] "
 "[-requireudp] "
 "[+s <flag-count>] "
 "[-s <flag-count>] "
@@ -203,7 +202,6 @@ const char *extraUsageString =
 "\t-replay: setup the server to replay a previously saved game\n"
 "\t-reportfile <filename>: the file to store reports in\n"
 "\t-reportpipe <filename>: the program to pipe reports through\n"
-"\t-requireidentify: require clients to identify\n"
 "\t-requireudp: require clients to use udp\n"
 "\t+s: always have <num> super flags (default=16)\n"
 "\t-s: allow up to <num> super flags (default=16)\n"
@@ -925,9 +923,6 @@ void parse(int argc, char **argv, CmdLineOptions &options, bool fromWorldFile)
     } else if (strcmp(argv[i], "-reportpipe") == 0) {
       checkArgc(1, i, argc, argv[i]);
       options.reportPipe = argv[i];
-    } else if (strcmp(argv[i], "-requireidentify") == 0) {
-      std::cerr << "require clients to identify!" << std::endl;
-      options.requireIdentify = true;
     } else if (strcmp(argv[i], "-requireudp") == 0) {
       std::cerr << "require UDP clients!" << std::endl;
       options.requireUDP = true;
