@@ -62,7 +62,7 @@ struct CmdLineOptions
     teamFlagTimeout(30), maxlagwarn(10000), lagwarnthresh(-1.0),
     idlekickthresh(-1.0), timeLimit(0.0f), timeElapsed(0.0f),
     linearAcceleration(0.0f), angularAcceleration(0.0f), useGivenPort(false),
-    useFallbackPort(false), requireUDP(false), requireIdentify(false), randomBoxes(false),
+    useFallbackPort(false), requireUDP(false), randomBoxes(false),
     randomCTF(false), flagsOnBuildings(false), respawnOnBuildings(false),
     oneGameOnly(false), timeManualStart(false), randomHeights(false),
     useTeleporters(false), teamKillerDies(true), printScore(false),
@@ -134,7 +134,6 @@ struct CmdLineOptions
   bool			useGivenPort;
   bool			useFallbackPort;
   bool			requireUDP;
-  bool			requireIdentify;
   bool			randomBoxes;
   bool			randomCTF;
   bool			flagsOnBuildings;
